<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Noir">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectionniveau"
                android:textColor="@color/Blanc"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/boutonNiveau1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bouton_un"
                android:text="@string/niveau1"
                android:layout_gravity="center_horizontal"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/Blanc"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/boutonNiveau2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bouton_un"
                android:text="@string/niveau2"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/Blanc"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/boutonNiveau3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bouton_un"
                android:text="@string/niveau3"
                android:layout_gravity="center_horizontal"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/Blanc"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/boutonNiveau4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bouton_un"
                android:text="@string/niveau4"
                android:layout_gravity="center_horizontal"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/Blanc"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>